Multilevel menu mobile/desktop done. Pending bugs about background and collapse submenu (mobile)

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -11,10 +11,10 @@
   a:hover {transition: background-color 0.6s, color 0.6s; -o-transition: background-color 0.6s, color 0.6s; -moz-transition: background-color 0.6s, color 0.6s; -webkit-transition: background-color 0.6s, color 0.6s; }
   .clear {display: block; clear: both;}
 
-  .submenu {display: none; padding: 12px 0; position: absolute; background-color: #FFF;  z-index: 100; }
+  .submenu { padding: 12px 0; position: absolute; background-color: #FFF;  z-index: 100; }
   .submenu li {float: none !important;}
   .submenu li a {padding: 15.5px 24px!important; display: block!important; clear: both!important; font: 17px/1 Galaxie!important; color: #777!important;}
-  .submenu li a:hover {background-color: #eee !important; color: #d7d7d7 !important}
+  .submenu li a:hover {background-color: #eee !important; color: #ec008c !important}
   .appear {display: block}
   #backg {display: none; background-color: rgba(0, 0, 0, 0.5); z-index: 10; position: absolute; width: 100%; height: 100%}
 
@@ -42,29 +42,81 @@
 
 
 
-  .sidenav .top{padding: 20px 24px;background-color: #d7d7d7;}
+  .sidenav .top{padding: 20px 24px;background-color: #ec008c;}
   .sidenav .top .logo {height: 20px;}
   .sidenav .top .logo img {max-width: 50px;}
   .sidenav .menuxs {padding-top: 12px; background-color: #FFF;}
   .sidenav ul li a{padding: 10px 10px 10px 24px; color: #1a1a1a; font-size: 21px;font-family: huge;display: block;}
   .sidenav ul li a:hover {background-color: #EEEEEE}
-  .sidenav ul #submenu-lblxs #link-subxs {background-image: url('../images/ic_arrow.png'); background-repeat:  no-repeat; background-position: right center;}
-  .sidenav .menuxs #submenuxs {display: none;}
-  .sidenav .menuxs #submenuxs li a{padding: 15.5px 24px !important; display: block !important;clear: both !important;font: 17px/1 Galaxie !important;color: #777 !important;}
-  .sidenav .menuxs #submenuxs li a:hover {background-color: #eee; color: #d7d7d7!important;}
+  .sidenav ul .submenu-lblxs .link-subxs {background-image: url('../images/ic_arrow.png'); background-repeat:  no-repeat; background-position: right center;}
+  .sidenav .menuxs .submenuxs {}
+  .sidenav .menuxs .submenuxs li a{padding: 15.5px 24px !important; display: block !important;clear: both !important;font: 17px/1 Galaxie !important;color: #777 !important;}
+  .sidenav .menuxs .submenuxs li a:hover {background-color: #eee; color: #ec008c!important;}
   .sidenav .copy {padding: 25px; font-family: 'Open Sans', sans-serif; position: absolute;bottom: 0;}
 
 
 #content {transition: margin-left .5s; width: 100%}
 
-#header {padding: 0 24px; background-color: #d7d7d7;  }
+#header {padding: 0 24px; background-color: #ec008c;  }
   #header .logo {padding: 24px 0; margin-right: 48px; float: left;}
   #header .logo img {max-width: 60px;}
-  #header #mainMenu {}
-  #header #mainMenu {overflow: hidden;}
-  #header #mainMenu li{ float: left;display: block; }
-  #header #mainMenu li a {padding: 24px 24px 25px 24px; color: #FFF; font-size: 21px;  font-family: huge; display: block;}
-  #header #mainMenu li a:hover {background-color: #FFF; color:#d7d7d7; text-decoration: none; }
+
+  #header #nav {position: relative; z-index:2;}
+  #header #nav {}
+  #header #nav li{ float: left;display: block; position:relative; }
+  #header #nav li a {float: left; padding: 24px 24px 25px 24px; color: #FFF; font-size: 21px;  font-family: huge; display: block;}
+  #header #nav li a:hover {background-color: #FFF; color:#ec008c; text-decoration: none; }
+
+
+/*Desktop Nav menu */
+
+#nav,#nav ul { list-style:none; margin:0;  }
+#nav ul { left:-9999px; position:absolute; top:77px; width:auto;}
+#nav > li > a {overflow:hidden;}
+
+#nav li a.fly { padding-right:15px;}
+#nav li a.fly:focus {background-color: #FFF; color: #ec008c!important;}
+#nav ul li { margin:0;}
+#nav li .dd {width: 140%}
+#nav li .dd li a { width: 100%; box-sizing: border-box;}
+
+
+#nav li a:focus {
+    outline-width:0;
+}
+
+/*popups*/
+#nav li a:active + ul.dd, #nav li a:focus + ul.dd, #nav li ul.dd:hover {
+    left:0;
+}
+
+
+/*Mobile Nav menu */
+#navxs {position: relative;}
+#navxs,#navxs ul { list-style:none; margin:0;  }
+#navxs ul { left:-9999px; position:relative; height: 0; top:0px; width:auto;}
+#navxs > li > a {overflow:hidden;}
+
+#navxs li a.fly { padding-right:15px;}
+#navxs li a.fly:focus {background-color: #FFF; color: #ec008c!important;}
+#navxs a.fly:focus .dd {height: 100%}
+
+#navxs ul li { margin:0;}
+#navxs li .dd {width: 140%}
+#navxs li .dd li a { width: 100%; box-sizing: border-box;}
+
+
+#navxs li a:focus {
+    outline-width:0;
+}
+
+/*popups*/
+#navxs li a:active + ul.dd, #navxs li a:focus + ul.dd, #navxs li ul.dd:hover {
+    left:0;
+    height: 100%;
+}
+
+
 
 #ic-toggle {background-image: url('../images/toggle-open.svg'); background-repeat: no-repeat; background-position: center center; height: 20px; width: 20px; display: none; cursor: pointer; float: left; padding: 20px 24px; height: 20px;}
 
